unpackaged/main/default/objects/ETT_Vehicle_Details__c/ETT_Vehicle_Details__c.object-meta.xml
<CustomObject>
    <label>Vehicle Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>