unpackaged/main/default/objects/ETT_Vehicle_Details__c/fields/ETT_ADNOC_Card_Limit__c.field-meta.xml
<CustomField>
    <fullName>ETT_ADNOC_Card_Limit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADNOC Card Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>