unpackaged/main/default/objects/ETT_Vehicle_Details__c/fields/ETT_ADNOC_Petrol_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_ADNOC_Petrol_Card_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADNOC Petrol Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>