unpackaged/main/default/objects/ETT_Vehicle_Details__c/fields/ETT_Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Driver_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>