unpackaged/main/default/objects/ETT_Vehicle_Details__c/fields/ETT_License_Registration__c.field-meta.xml
<CustomField>
    <fullName>ETT_License_Registration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>License Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>