unpackaged/main/default/objects/ETT_Vehicle_Details__c/fields/ETT_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Model_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>