unpackaged/main/default/objects/ETT_Vehicle_Details__c/fields/ETT_Parking_Area__c.field-meta.xml
<CustomField>
    <fullName>ETT_Parking_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parking Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>