unpackaged/main/default/objects/ETT_Vehicle_Details__c/fields/ETT_Plate_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Plate_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plate Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>