unpackaged/main/default/objects/ETT_Vehicle_Details__c/fields/ETT_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Plate_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plate Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>