unpackaged/main/default/objects/ETT_Vehicle_Details__c/fields/ETT_Registration_Expiry__c.field-meta.xml
<CustomField>
    <fullName>ETT_Registration_Expiry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration Expiry</label>
    <type>Date</type>
</CustomField>