unpackaged/main/default/objects/ETT_Vehicle_Details__c/fields/ETT_Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>ETT_Vehicle_Status__c</fullName>
    <label>Vehicle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>