unpackaged/main/default/objects/ETT_Vehicle_Details__c/fields/ETT_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 ton Pickup</fullName>
            </value>
            <value>
                <fullName>3 ton Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>