unpackaged/main/default/objects/ETT_Vehicle_Details__c/listViews/All_Tyre.listView-meta.xml
<ListView>
    <fullName>All_Tyre</fullName>
    <columns>NAME</columns>
    <columns>ETT_Collection_Card__c</columns>
    <columns>ETT_Vehicle_Status__c</columns>
    <columns>ETT_Vehicle_Type__c</columns>
    <columns>ETT_Plate_Code__c</columns>
    <columns>ETT_Plate_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Tyre</label>
</ListView>